--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,16 @@
 /.pnp
 .pnp.js
 
-# Logs
-logs
-*.log
+# testing
+/coverage
+
+# misc
+.DS_Store
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# OS
-.DS_Store
-Thumbs.db
 
 # Env files
 .env
 .env.*
 
-# VS Code
-.vscode/
